# ocaml-multicore-monorepo

./: README.md  dune  dune-project  multicore-monorepo.opam  multicore-monorepo.opam.locked
.github/workflows/: ci.yml
docs/: TODO.md  prelude.ml
duniverse/biniou/: dune-project
duniverse/cmdliner/: cmdliner.opam
duniverse/digestif/: digestif.opam  dune-project
duniverse/digestif/src-ocaml/: baijiu_sha3_384.ml
duniverse/dream/: .gitmodules  dream.opam
duniverse/dream/src/eml/: dune
duniverse/eio/: dune-project  eio.opam  eio_linux.opam  eio_luv.opam  eio_main.opam
duniverse/eio/lib_eio/: eio.mli  net.ml
duniverse/eio/lib_eio_luv/: eio_luv.ml
duniverse/eio/tests/: test_network.md
duniverse/fmt/src/: fmt.ml
duniverse/js_of_ocaml/: dune-project  js_of_ocaml-compiler.opam
duniverse/js_of_ocaml/compiler/lib/: instr.ml  magic_number.ml  ocaml_version.ml  ocaml_version.mli  parse_bytecode.ml
duniverse/js_of_ocaml/compiler/lib-runtime-files/: js_of_ocaml_compiler_runtime_files.ml
duniverse/js_of_ocaml/runtime/: domain.js  dune  fail.js  fiber.js  obj.js
duniverse/js_of_ocaml/toplevel/lib/: env2.ml  jsooTop.ml  jsooTop2.ml
duniverse/lib-findlib/: dune-project
duniverse/lib-findlib/src/findlib/: topfind.ml.in
duniverse/lib-findlib/tools/extract_args/: extract_args.ml
duniverse/lwt/src/unix/: dune
duniverse/lwt/src/unix/config/: discover.ml  dune
duniverse/lwt_eio/: dune-project  lwt_eio.opam
duniverse/mirage-clock/: dune-project  mirage-clock-freestanding.opam  mirage-clock-unix.opam  mirage-clock.opam
duniverse/mirage-clock/src/: mirage_clock.ml
duniverse/mmap/: mmap.opam
duniverse/multipart_form/: multipart_form.opam
duniverse/multipart_form/lib_lwt/: dune
duniverse/ocaml-uring/: dune-project  uring.opam
duniverse/ocplib-endian/: ocplib-endian.opam
duniverse/odoc-parser/: dune-project  odoc-parser.opam  odoc-parser.opam.template
duniverse/ppxlib/: CHANGES.md
duniverse/ppxlib/ast/pp/: pp.ml
duniverse/prettym/: CHANGES.md  dune-project  prettym.opam
duniverse/prettym/test/: test.ml
duniverse/ptime/: ptime.opam
duniverse/unstrctrd/: .travis.yml  CHANGES.md  dune-project  unstrctrd.opam
duniverse/unstrctrd/fuzz/: dune
duniverse/unstrctrd/lib/: unstrctrd.ml  unstrctrd.mli
duniverse/unstrctrd/test/: dune  test.ml  test_angstrom.ml
duniverse/uutf/: uutf.opam
examples/dream/: dune  main.ml
