version: "0.0.2"
opam-version: "2.0"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/prettym"
bug-reports:  "https://github.com/dinosaure/prettym/issues"
dev-repo:     "git+https://github.com/dinosaure/prettym.git"
doc:          "https://dinosaure.github.io/prettym/"
license:      "MIT"
synopsis:     "An memory-bounded encoder according to RFC 822"
description:  """A best effort memory-bounded encoder to respect the 80 column limitation"""

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml"            {>= "4.07.0"}
  "dune"             {>= "2.8"}
  "bigarray-overlap"
  "fmt"              {>= "0.8.7"}
  "ke"               {>= "0.4"}
  "bigstringaf"
  "bigarray-compat"
  "ptime"            {with-test}
  "alcotest"         {with-test}
  "jsonm"            {with-test}
  "base64"           {with-test}
]