version: "0.3"
opam-version: "2.0"
name: "unstrctrd"
synopsis: "Unstructured parser"
description: "Fast and compliant Unstructured parser according RFC 822"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://github.com/dinosaure/unstrctrd"
doc: "https://dinosaure.github.io/unstrctrd/"
bug-reports: "https://github.com/dinosaure/unstrctrd/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {>= "1.10"}
  "uutf"
  "angstrom" {>= "0.14.0"}
  "rresult" {with-test}
  "alcotest" {with-test}
  "ke" {with-test}
  "bigstringaf" {with-test}
  "hxd" {with-test & >= "0.3.1"}
  "fmt" {with-test & >= "0.8.7"}
  "crowbar" {>= "0.2" & with-test}
]
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/dinosaure/unstrctrd.git"