(executable
 (name test)
 (modules test)
 (libraries alcotest rresult unstrctrd))

(executable
 (name test_angstrom)
 (modules test_angstrom)
 (libraries alcotest rresult unstrctrd.parser hxd.string bigstringaf ke))

(rule
 (alias runtest)
 (deps
  (:test test.exe))
 (action
  (run %{test} --color=always)))

(rule
 (alias runtest)
 (deps
  (:test test_angstrom.exe))
 (action
  (run %{test} --color=always)))
